#841-hide background image on mobile, fixed transparency on twitter, calendar block

--- a/amani/themes/amani_zen/sass/components/_front-page-blocks.scss
+++ b/amani/themes/amani_zen/sass/components/_front-page-blocks.scss
@@ -14,12 +14,12 @@
     width: 31%;
     margin: 0 1%;
     vertical-align: top;
-    
+
     @media all and (max-width: $breakpoint) {
       background: url(../images/divid-line.png) no-repeat center bottom;
       width: 100%;
       padding: 10px 20px 70px;
-      
+
       &.views-row-last {
         background: none;
         padding-bottom: 10px;
@@ -53,7 +53,7 @@
 
         a {
           color: #333;
-          
+
           .more-arrow {
             border: 0;
             font-family: $avenir;
@@ -84,11 +84,11 @@
 #block-views-calendar-of-events-block-3 {
   display: inline-block;
   vertical-align: top;
-  margin: 50px 30px;
+  margin: 100px 30px 30px 30px;
   width: 290px;
   height: 370px;
   text-align: left;
-  
+
   @media all and (max-width: $breakpoint) {
     margin: 50px 0;
   }
@@ -134,6 +134,12 @@
     height: auto !important;
     width: 100% !important;
   }
+
+  @media all and (max-width: $breakpoint) {
+    & {
+      opacity: 0;
+    }
+  }
 }
 
 // Twitter block
@@ -141,9 +147,9 @@
   margin-left: 30px;
   font-family: $avenir-condensed;
   min-height: 387px;
-  
+
   @media all and (max-width: $breakpoint) {
-    background: #5e5e5e;
+    background: #e5e5e5;
     width: 110%;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -153,10 +159,10 @@
 
   .home-page-twitter-block {
     text-transform: uppercase;
-    background: #5e5e5e;
+    background: rgba(0,0,0,0.4);
     padding: 16px;
     min-height: 387px;
-    
+
     @media all and (max-width: $breakpoint) {
        width: 280px;
        margin: 0 auto;
@@ -211,7 +217,7 @@
 #block-views-calendar-of-events-block-3 {
 
   font-family: $avenir;
-  
+
   @media all and (max-width: $breakpoint) {
     background: #5e5e5e;
     width: 110%;
@@ -222,9 +228,10 @@
   }
 
   .view-calendar-of-events {
-    background: #5e5e5e;
-    height: 370px;
-    
+    background: rgba(0,0,0,0.4);
+    height: 385px;
+    max-height: 390px;
+
     @media all and (max-width: $breakpoint) {
       width: 280px;
       margin: 0 auto;
@@ -360,7 +367,7 @@
   @media all and (max-width: $breakpoint) {
     margin-top: 40px;
   }
-  
+
   h2 {
     font-size: 28px;
     font-family: $avenir-condensed;
@@ -379,12 +386,12 @@
     margin: 0 2% 20px;
     display: inline-block;
     vertical-align: top;
-    
+
     @media all and (max-width: $breakpoint) {
       width: 100%;
       margin: 0 0 20px;
     }
-    
+
     .views-field-field-image {
       float: left;
       margin-right: 15px;
@@ -396,17 +403,17 @@
         width: 160px;
         height: 120px;
       }
-      
+
       img {
         border: $almost-white solid 5px;
         box-shadow: 1px 1px 1px $grey-clear;
-        
+
         @media all and (max-width: $breakpoint) {
           width: 150px;
           height: 110px;
         }
       }
-      
+
       &:before {
         content: "";
         background: url(../images/photo-shadow-left.png) no-repeat 0 0;
@@ -428,21 +435,21 @@
         right: 0;
       }
     }
-    
+
     .views-field-body {
       display: table;
     }
-    
+
     .views-field-title {
       margin-bottom: 5px;
     }
-    
+
     .views-field-title a {
       font-family: $avenir-condensed;
       color: $purple-primary;
       font-size: 16px;
     }
-    
+
     .views-field-title-1 a {
       font-family: $avenir-condensed;
       display: block;
@@ -452,7 +459,7 @@
       @media all and (max-width: $breakpoint) {
         margin-left: 175px;
       }
-      
+
       &:before {
         content: ">>";
         font-family: $avenir;
